kubernetes/immich/v2/immich.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-database
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-database
  template:
    metadata:
      labels:
        app: immich-database
    spec:
      securityContext:
        fsGroup: 100
      containers:
        - name: immich-postgres
          image: "docker.io/tensorchord/pgvecto-rs:pg14-v0.2.0@sha256:90724186f0a3517cf6914295b5ab410db9ce23190a2d9d0b9dd6463e3fa298f0"
          imagePullPolicy: Always
          securityContext:
            runAsGroup: 100
            runAsUser: 4000
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources: {}
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: immich-db-pvc
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      securityContext:
        fsGroup: 100
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      containers:
        - name: immich-server
          image: "ghcr.io/immich-app/immich-server:release"
          imagePullPolicy: Always
          securityContext:
            runAsGroup: 100
            runAsUser: 4000
          ports:
            - containerPort: 3001
          livenessProbe:
            failureThreshold: 120
            httpGet:
              path: /server/ping
              port: 2283
            initialDelaySeconds: 10
            periodSeconds: 120
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 120
            httpGet:
              path: /server/ping
              port: 2283
            initialDelaySeconds: 10
            periodSeconds: 120
            timeoutSeconds: 1
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
              subPath: library
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: immich-library-pvc
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: immich-machine-learning
          image: "ghcr.io/immich-app/immich-machine-learning:release"
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
            - name: cache
              mountPath: /cache
          resources: {}
      volumes:
        - name: cache
          emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: immich-database
  namespace: immich
  labels:
    app: immich-database
spec:
  type: ClusterIP
  selector:
    app: immich-database
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: 5432
---
kind: Service
apiVersion: v1
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
spec:
  type: ClusterIP
  selector:
    app: immich-machine-learning
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
spec:
  type: ClusterIP
  selector:
    app: immich-server
  ports:
    - port: 2283
      targetPort: 2283
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-private
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10g
  namespace: immich
  labels:
    app: immich
spec:
  rules:
  - host: immich.danwils.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: immich-server
            port:
              number: 2283
  tls:
  - hosts:
    - immich.danwils.com
    secretName: immich-tls
  ingressClassName: nginx
---
